@@ -1,3 +1,5 @@
+-- $NetBSD: printenv.lua,v 1.2 2014/01/02 08:21:38 mrg Exp $
+
 -- this small Lua script demonstrates the use of Lua in (bozo)httpd
 -- it will simply output the "environment"
 
