@@ -8,7 +8,8 @@ SRCS=	bozohttpd-small.c content-bozo-small.c
 LEAN_IFDEF_FLAGS=	-UDEBUG -DNO_USER_SUPPORT \
 			-DNO_CGIBIN_SUPPORT -DNO_DIRINDEX_SUPPORT \
 			-DNO_DAEMON_MODE -DNO_DYNAMIC_CONTENT \
-			-DNO_SSL_SUPPORT -UDO_HTPASSWD
+			-DNO_SSL_SUPPORT -UDO_HTPASSWD \
+			-DNO_LUA_SUPPORT
 
 CFLAGS=	-I$(.CURDIR)/.. ${LEAN_IFDEF_FLAGS}
 
